--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div id="app"></div>
     <script type="text/javascript" src="./threejs/three.js"></script>
     <script type="text/javascript" src="./threejs/AsciiEffect.js"></script>
+    <script type="text/javascript" src="./threejs/stats.js"></script>
+    <script type="text/javascript" src="./threejs/dat.gui.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
