多边形构建

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script type="text/javascript" src="./threejs/AsciiEffect.js"></script>
     <script type="text/javascript" src="./threejs/stats.js"></script>
     <script type="text/javascript" src="./threejs/dat.gui.js"></script>
+    <script type="text/javascript" src="./threejs/ConvexGeometry.js"></script>
+    <script type="text/javascript" src="./threejs/ParametricGeometries.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
