--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <script type="text/javascript" src="./threejs/ShaderPass.js"></script>
     <script type="text/javascript" src="./threejs/FXAAShader.js"></script>
     <script type="text/javascript" src="./threejs/MaskPass.js"></script>
+    <script type="text/javascript" src="./threejs/d3-threeD.js"></script>
+    <script type="text/javascript" src="./threejs/OrbitControls.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
